--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:text="@string/text_view1" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/coordinate1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -43,7 +43,7 @@
             android:text="@string/text_view2" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/coordinate2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/Button1"
+            android:id="@+id/goButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/button1"
