--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,16 +14,18 @@
 
         <TextView
             android:id="@+id/textViewR1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
+            android:textSize="20sp"
             android:text="@string/text_view1" />
 
         <EditText
             android:id="@+id/coordinate1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="20sp"
             android:ems="10"
             android:inputType="numberDecimal" />
 
@@ -37,16 +39,18 @@
 
         <TextView
             android:id="@+id/textViewR2"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
+            android:textSize="20sp"
             android:text="@string/text_view2" />
 
         <EditText
             android:id="@+id/coordinate2"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="20sp"
             android:ems="10"
             android:inputType="numberDecimal" />
 
