--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,22 @@
             android:text="@string/text_view1" />
 
         <EditText
-            android:id="@+id/coordinate1"
+        android:id="@+id/latitude1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight=".5"
+        android:textSize="20sp"
+        android:hint="@string/hint_lat"
+        android:ems="10"
+        android:inputType="numberDecimal" />
+
+        <EditText
+            android:id="@+id/longitude1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight=".5"
             android:textSize="20sp"
+            android:hint="@string/hint_long"
             android:ems="10"
             android:inputType="numberDecimal" />
 
@@ -46,11 +57,22 @@
             android:text="@string/text_view2" />
 
         <EditText
-            android:id="@+id/coordinate2"
+            android:id="@+id/latitude2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight=".5"
             android:textSize="20sp"
+            android:hint="@string/hint_lat"
+            android:ems="10"
+            android:inputType="numberDecimal" />
+
+        <EditText
+            android:id="@+id/longitude2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:textSize="20sp"
+            android:hint="@string/hint_long"
             android:ems="10"
             android:inputType="numberDecimal" />
 
